# hackher_discord_bot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.light  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
chatbot/: __init__.py  classes.py  client.py  database.py  logger.py  main.py
chatbot/bot_commands/: __init__.py  emoji.py  formatting.py  help.py  resources.py
doc/: CONTRIBUTING.md  env.sample
helpers/: send_message.py
